<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PrincipalMenu.Fragments.InicioFragmentMenu">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <FrameLayout
            android:id="@+id/frameHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:layout_marginBottom="40dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photoUserSingin"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:src="@drawable/perfiluser" />

            <ImageView
                android:id="@+id/closeActionLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:src="@drawable/cerrarsesion" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="46dp"
                android:layout_marginTop="30dp"
                android:elevation="6dp"
                android:src="@drawable/line" />


        </FrameLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/frameHeader"
            android:layout_marginBottom="10dp"
            android:padding="4dp"
            app:columnCount="2"
            app:orientation="horizontal"
            app:rowCount="3">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardRegistrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#CED9EB"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:id="@+id/linearRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="#CED9EB"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fbt_registrar"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/cliente" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_crear"
                        android:textAlignment="center"
                        android:textColor="@color/accent"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAdministrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#CED9EB"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:id="@+id/linearPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fbt_administrar"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/pago" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_administra"
                        android:textAlignment="center"
                        android:textColor="@color/accent"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPerfil"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#CED9EB"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:id="@+id/linearPerfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fbt_pefil"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/perfil" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_perfil"
                        android:textAlignment="center"
                        android:textColor="@color/accent"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPrestamo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#CED9EB"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:id="@+id/linearLender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fbt_prestamo"
                        android:layout_width="100dp"
                        android:layout_height="82dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/prestar" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_prestamo"
                        android:textAlignment="center"
                        android:textColor="@color/accent"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAcerca"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#CED9EB"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:id="@+id/linearSetting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fbt_acerca"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/acercade" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_acerca"
                        android:textAlignment="center"
                        android:textColor="@color/accent"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHistorial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="10dp"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="#CED9EB"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1">

                <LinearLayout
                    android:id="@+id/linearHistorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fbt_historial"
                        android:layout_width="100dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/historial" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/btn_hitorial"
                        android:textAlignment="center"
                        android:textColor="@color/accent"
                        android:textSize="19sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.gridlayout.widget.GridLayout>
    </RelativeLayout>
</ScrollView>